feature(everything): switched to spring boot